--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "date-and-time": "^2.4.1",
     "express": "^4.18.1",
     "joi": "^17.6.0",
